--- a/src/main/java/lagatrix/gui/components/complex/rows/ConnecionRow.form
+++ b/src/main/java/lagatrix/gui/components/complex/rows/ConnecionRow.form
@@ -35,7 +35,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="10" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="nameLabel" alignment="3" min="-2" pref="82" max="-2" attributes="0"/>
@@ -43,7 +43,7 @@
                   </Group>
                   <Component id="distroImage" min="-2" pref="82" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="10" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
