--- a/src/main/java/lagatrix/gui/window/LoginWindow.form
+++ b/src/main/java/lagatrix/gui/window/LoginWindow.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Lagatrix"/>
   </Properties>
   <SyntheticProperties>
@@ -87,7 +87,7 @@
       <SubComponents>
         <Component class="lagatrix.gui.components.complex.fragment.Header" name="header">
           <Properties>
-            <Property name="father" type="javax.swing.JFrame" editor="org.netbeans.modules.form.ComponentChooserEditor">
+            <Property name="father" type="java.awt.Window" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="Form"/>
             </Property>
           </Properties>
