--- a/src/main/java/lagatrix/gui/window/ConnectionWindow.form
+++ b/src/main/java/lagatrix/gui/window/ConnectionWindow.form
@@ -40,7 +40,7 @@
     <Container class="lagatrix.gui.components.simple.RoundPanel" name="mainPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+          <Color blue="f5" green="f5" red="f5" type="rgb"/>
         </Property>
         <Property name="radius" type="int" value="61"/>
       </Properties>
@@ -122,7 +122,6 @@
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="verticalScrollBarPolicy" type="int" value="22"/>
           </Properties>
 
@@ -136,7 +135,7 @@
         </Container>
         <Component class="lagatrix.gui.components.simple.buttons.DefaulRoundButton" name="connectButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Connectar"/>
+            <Property name="text" type="java.lang.String" value="Conectar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="connectButtonActionPerformed"/>
