--- a/src/main/java/lagatrix/gui/window/LoginWindow.form
+++ b/src/main/java/lagatrix/gui/window/LoginWindow.form
@@ -24,10 +24,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="mainPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-          </Group>
+          <Component id="mainPanel" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -40,7 +37,7 @@
     <Container class="lagatrix.gui.components.simple.RoundPanel" name="mainPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+          <Color blue="eb" green="eb" red="eb" type="rgb"/>
         </Property>
         <Property name="radius" type="int" value="61"/>
       </Properties>
