--- a/src/main/java/lagatrix/gui/window/MainWindow.form
+++ b/src/main/java/lagatrix/gui/window/MainWindow.form
@@ -37,7 +37,7 @@
     <Container class="lagatrix.gui.components.simple.RoundPanel" name="mainPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+          <Color blue="f5" green="f5" red="f5" type="rgb"/>
         </Property>
         <Property name="radius" type="int" value="61"/>
       </Properties>
