--- a/src/main/java/lagatrix/gui/dialog/CorrectDialog.form
+++ b/src/main/java/lagatrix/gui/dialog/CorrectDialog.form
@@ -108,7 +108,7 @@
               <Font name="sansserif" size="18" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="33" red="33" type="rgb"/>
+              <Color blue="40" green="40" id="darkGray" palette="1" red="40" type="palette"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Texto correcto ejemplo"/>
           </Properties>
