--- a/src/main/java/lagatrix/gui/dialog/QuestionDialog.form
+++ b/src/main/java/lagatrix/gui/dialog/QuestionDialog.form
@@ -106,6 +106,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="textLabel">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="40" green="40" id="darkGray" palette="1" red="40" type="palette"/>
+            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="sansserif" size="18" style="0"/>
             </Property>
