Implements status dialogs part 2

--- a/src/main/java/lagatrix/gui/views/formulary/ConnectionFormularyView.form
+++ b/src/main/java/lagatrix/gui/views/formulary/ConnectionFormularyView.form
@@ -66,7 +66,7 @@
     <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="ipInput">
       <Properties>
         <Property name="defaultValue" type="java.lang.String" value=""/>
-        <Property name="descriptionText" type="java.lang.String" value="IP"/>
+        <Property name="descriptionText" type="java.lang.String" value="IP/Host"/>
       </Properties>
     </Component>
     <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="portInput">
