--- a/src/main/java/lagatrix/gui/views/main/form/EventView.form
+++ b/src/main/java/lagatrix/gui/views/main/form/EventView.form
@@ -163,6 +163,9 @@
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="ff" red="66" type="rgb"/>
+        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="null"/>
         </Property>
